# ros2_study

./: README.md
install/: local_setup.sh  setup.sh
install/lqr_controller/include/lqr_controller/: lqr_controller_parameters.hpp
install/lqr_controller/include/lqr_controller/lqr_controller/: lqr_controller.hpp  validate_lqr_controller_parameters.hpp  visibility_control.h
install/lqr_controller/share/lqr_controller/: local_setup.sh  lqr_controller.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lqr_controller/share/lqr_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  lqr_controllerConfig.cmake
install/robot_description_pkg/share/robot_description_pkg/: package.sh  package.xml
install/robot_description_pkg/share/robot_description_pkg/launch/: robot_display.launch.py
install/robot_description_pkg/share/robot_description_pkg/plugins/: CameraLink.urdf.xacro  gazebo_sensor_camera_plugin.xacro
install/robot_description_pkg/share/robot_description_pkg/urdf/: balance_car.urdf.xacro
install/robot_state_pub_interface/share/robot_state_pub_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_state_pub_interface/share/robot_state_pub_interface/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robot_state_pub_interface__rosidl_generator_cExport-noconfig.cmake  export_robot_state_pub_interface__rosidl_generator_pyExport.cmake  (+7 more)
log/: latest_build
src/: K_calc.m  K_calc_matlab.m  k_calc_python.py
src/lqr_controller/: CMakeLists.txt  package.xml
src/lqr_controller/include/lqr_controller/: lqr_controller.hpp
src/lqr_controller/src/: lqr_controller.cpp  lqr_controller.yaml
src/robot_description_pkg/: CMakeLists.txt
src/robot_description_pkg/config/: balance_car_ros2_controller.yaml
src/robot_description_pkg/urdf/: balance_car.ros2_control.xacro  base_link.urdf.xacro  common_inertia.xacro  leg_link.urdf.xacro
src/robot_description_pkg/urdf/actor/: wheel_link.urdf.xacro
src/robot_description_pkg/urdf/sensor/: camera_link.urdf.xacro
src/robot_state_pub_interface/: CMakeLists.txt  package.xml
(+25 files in other folders)
